Add execution optimisation notes to README
Signed-off-by: Ashley <73482956+ascopes@users.noreply.github.com>